html/css completed

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       </div>
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Standard Equipment</a></li>
+        <li><a href="standard-equipment.html">Standard Equipment</a></li>
         <li><a href="#">Buy Equipment</a></li>
-        <li><a href="#">About Me</a></li>
+        <li><a href="about.html">About Me</a></li>
       </ul>
     </div>
   </nav>
@@ -41,6 +41,18 @@
         Roll for starting gold and buy equipment.
       </p>
     </div>
+  </div>
+  <div class="feature" id="about">
+    <div class="container pic">
+      <h2>About Me</h2>
+      <p>
+        A breif section about me, the creator of the dnd 5e equipment generator
+      </p>
+  </div>
+</div>
+<div class="footer">
+  <div class="pull-right">
+    <p>David Chase 2016</p>
   </div>
 
 
