adding js and jq

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
   <div class="header">
     <div class="container">
       <h1>Dnd 5e Equipment Generator</h1>
@@ -39,9 +40,12 @@
       </div>
     </div>
   </div>
+
   <div class="footer">
     <div class="pull-right">
       <p>David Chase</p>
+    </div>
   </div>
+
 </body>
 </html>
