--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -26,25 +26,25 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <p>Class</p>
+        <h2>Class</h2>
         <select>
-          <option value="Barbarian">Barbarian</option>
-          <option value="Bard">Bard</option>
-          <option value="Cleric">Cleric</option>
-          <option value="Druid">Druid</option>
-          <option value="Fighter">Fighter</option>
-          <option value="Monk">Monk</option>
-          <option value="Paladin">Paladin</option>
-          <option value="Ranger">Ranger</option>
-          <option value="Rouge">Rouge</option>
-          <option value="Sorcerer">Sorcerer</option>
-          <option value="Warlockl">Warlock</option>
-          <option value="Wizard">Wizard</option>
+          <option value="barbarian.png">Barbarian</option>
+          <option value="bard.png">Bard</option>
+          <option value="cleric.png">Cleric</option>
+          <option value="druid.png">Druid</option>
+          <option value="fighter.png">Fighter</option>
+          <option value="monk.png">Monk</option>
+          <option value="paladin.png">Paladin</option>
+          <option value="ranger.png">Ranger</option>
+          <option value="rouge.png">Rouge</option>
+          <option value="sorcerer.png">Sorcerer</option>
+          <option value="warlock.png">Warlock</option>
+          <option value="wizard.png">Wizard</option>
         </select>
 
       </div>
       <div class="col-md-4">
-        <p>Background</p>
+        <h2>Background</h2>
         <select>
           <option value="Acolyte">Acolyte</option>
           <option value="Charlatan">Charlatan</option>
@@ -86,7 +86,8 @@
   </div>
 
 
-
+<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
+<script type="text/javascript" src="main.js"></script>
 
 
 </body>
