pic switch and choices are working

--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -36,7 +36,7 @@
           <option value="monk.png">Monk</option>
           <option value="paladin.png">Paladin</option>
           <option value="ranger.png">Ranger</option>
-          <option value="rouge.png">Rouge</option>
+          <option value="rogue.png">Rogue</option>
           <option value="sorcerer.png">Sorcerer</option>
           <option value="warlock.png">Warlock</option>
           <option value="wizard.png">Wizard</option>
@@ -72,6 +72,229 @@
       </div>
       <div class="col-md-4">
         <div class="choices">
+          <form class="show barbarian">
+            <input type="radio" name="equipment" value="greataxe" checked> A greataxe<br>
+            <input type="radio" name="equipment" value="any martial weapon"> Any martial weapon<br>
+          </form>
+          <br>
+          <br>
+          <form class="show barbarian">
+            <input type="radio" name="equipment" value="two handaxes" checked> Two handaxes<br>
+            <input type="radio" name="equipment" value="any simple weapon"> Any simple weapon
+          </form>
+          <form class="hidden bard">
+            <input type="radio" name="equipment" value="rapier" checked> A rapier<br>
+            <input type="radio" name="equipment" value="longsword">A longsword<br>
+            <input type="radio" name="equipment" value="any simple weapon"> Any simple weapon
+            <br>
+            <br>
+          </form>
+
+          <form class="hidden bard">
+            <input type="radio" name="equipment" value="diplomat's pack" checked>A diplomat's pack
+            <br>
+            <input type="radio" name="equipment" value="entertainer's pack"> An entertainer's pack
+            <br>
+            <br>
+          </form>
+
+          <form class="hidden bard">
+            <input type="radio" name="equipment" value="lute" checked> A lute<br>
+            <input type="radio" name="equipment" value="any other musical instrument"> Any other musical instrument
+            <br>
+            <br>
+          </form>
+
+          <form class="hidden cleric">
+            <input type="radio" name="equipment" value="mace" checked> A mace<br>
+            <input type="radio" name="equipment" value="warhammer"> A warhammer
+            <br>
+            <br>
+          </form>
+          <form class="hidden cleric">
+            <input type="radio" name="equipment" value="scale mail" checked> Scale mail<br>
+            <input type="radio" name="equipment" value="leather armor"> Leather armor<br>
+            <input type="radio" name="equipment" value="chain mail"> Chain mail
+            <br>
+            <br>
+          </form>
+
+          <form class="hidden cleric">
+            <input type="radio" name="equipment" value="light crossbow" checked> A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <br>
+            <br>
+          </form>
+
+          <form class="hidden cleric">
+            <input type="radio" name="equipment" value="priest's pack" checked>A priest's pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden druid">
+            <input type="radio" name="equipment" value="shield" checked>A wooden shield<br>
+            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon<br>
+            <br>
+            <br>
+          </form>
+          <form class="hidden druid">
+            <input type="radio" name="equipment" value="scimitar" checked>A scimitar<br>
+            <input type="radio" name="equipment" value="any simple melee weapon">Any simple melee weapon<br>
+            <br>
+            <br>
+          </form>
+          <form class="hidden fighter">
+            <input type="radio" name="equipment" value="chain mail" checked>Chain mail<br>
+            <input type="radio" name="equipment" value="leather armor and longbow">Leather armor, longbow, and 20 arrows<br>
+            <br>
+            <br>
+          </form>
+          <form class="hidden fighter">
+            <input type="radio" name="equipment" value="martial weapon" checked>Any martial weapon and a shield<br>
+            <input type="radio" name="equipment" value="two martial weapons"> Two martial weapons
+            <br>
+            <br>
+          </form>
+          <form class="hidden fighter">
+            <input type="radio" name="equipment" value="light crossbow" checked>A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment" value="two handaxes">Two handaxes
+            <br>
+            <br>
+          </form>
+          <form class="hidden fighter">
+            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A dungeoneer's pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden monk">
+            <input type="radio" name="equipment" value="shortsword" checked>A shortsword<br>
+            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <br>
+            <br>
+          </form>
+          <form class="hidden monk">
+            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A dungeoneer's pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden paladin">
+            <input type="radio" name="equipment" value="martial weapon" checked>A martial weapon and a shield<br>
+            <input type="radio" name="equipment" value="two martial weapons">Two martial weapons
+            <br>
+            <br>
+          </form>
+          <form class="hidden paladin">
+            <input type="radio" name="equipment" value="five javelins" checked>Five Javelins<br>
+            <input type="radio" name="equipment" value="any simple melee weapon">Any simple melee weapon
+            <br>
+            <br>
+          </form>
+          <form class="hidden paladin">
+            <input type="radio" name="equipment" value="priest's pack" checked>A priests pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden ranger">
+            <input type="radio" name="equipment" value="scale mail" checked>Scale mail<br>
+            <input type="radio" name="equipment" value="leather armor">Leather armor
+            <br>
+            <br>
+          </form>
+          <form class="hidden ranger">
+            <input type="radio" name="equipment" value="two shortswords" checked>Two shortswords<br>
+            <input type="radio" name="equipment" value="two simple melee weapons">Two simple mele weapons
+            <br>
+            <br>
+          </form>
+          <form class="hidden ranger">
+            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A dungeoneer's pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden rogue">
+            <input type="radio" name="equipment" value="rapier" checked>A rapier<br>
+            <input type="radio" name="equipment" value="shortsword">A shortsword<br>
+            <br>
+            <br>
+          </form>
+          <form class="hidden rogue">
+            <input type="radio" name="equipment" value="shortbow" checked>A shortbow and 20 arrows<br>
+            <input type="radio" name="equipment" value="shortsword">A shortsword
+            <br>
+            <br>
+          </form>
+          <form class="hidden rogue">
+            <input type="radio" name="equipment" value="burglar's pack" checked>A burglar's pack<br>
+            <input type="radio" name="equipment" value="dungeoneer's pack">A dungeoneer's pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden sorcerer">
+            <input type="radio" name="equipment" value="light crossbow" checked>A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <br>
+            <br>
+          </form>
+          <form class="hidden sorcerer">
+            <input type="radio" name="equipment" value="component pouch" checked>A component pouch<br>
+            <input type="radio" name="equipment" value="arcane focus">An arcane focus
+            <br>
+            <br>
+          </form>
+          <form class="hidden sorcerer">
+            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A duneongeer's pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden warlock">
+            <input type="radio" name="equipment" value="light crossbow" checked>A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <br>
+            <br>
+          </form>
+          <form class="hidden warlock">
+            <input type="radio" name="equipment" value="component pouch" checked>A component pouch<br>
+            <input type="radio" name="equipment" value="arcane focus">An arcane focus
+            <br>
+            <br>
+          </form>
+          <form class="hidden warlock">
+            <input type="radio" name="equipment" value="scholar's pack" checked>A scholar's pack<br>
+            <input type="radio" name="equipment" value="dungeoneer's pack">A dungeoneer's pack
+            <br>
+            <br>
+          </form>
+          <form class="hidden wizard">
+            <input type="radio" name="equipment" value="quarterstaff" checked>A quarterstaff<br>
+            <input type="radio" name="equipment" value="dagger">A dagger
+            <br>
+            <br>
+          </form>
+          <form class="hidden wizard">
+            <input type="radio" name="equipment" value="component pouch" checked>A component pouch<br>
+            <input type="radio" name="equipment" value="arcane focus">An arcane focus
+            <br>
+            <br>
+          </form>
+          <form class="hidden wizard">
+            <input type="radio" name="equipment" value="scholar's pack" checked>A scholar's pack<br>
+            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <br>
+            <br>
+          </form>
+
+
+
+
+
+
       </div>
       </div>
       <div class="col-md-4">
@@ -88,6 +311,7 @@
 
 <script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
 <script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="arrays.js"></script>
 
 
 </body>
