--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -44,26 +44,29 @@
 
       </div>
       <div class="col-md-4">
-        <h2>Background</h2>
-        <select>
-          <option value="Acolyte">Acolyte</option>
-          <option value="Charlatan">Charlatan</option>
-          <option value="Criminal">Criminal</option>
-          <option value="Entertainer">Entertainer</option>
-          <option value="Folk Hero">Folk Hero</option>
-          <option value="Guild Artisan">Guild Artisan</option>
-          <option value="Hermit">Hermit</option>
-          <option value="Noble">Noble</option>
-          <option value="Outlander">Outlander</option>
-          <option value="Sage">Sage</option>
-          <option value="Sailor">Sailor</option>
-          <option value="Soldier">Soldier</option>
-          <option value="Urchin">Urchin</option>
-        </select>
+        <h2>&lt-- choose a class. Choose a background --&gt</h2>
+
 
       </div>
       <div class="col-md-4">
-        <h2>Your Equipment</h2>
+        <br>
+        <br>
+        <select>
+          <option value="acolyte">Acolyte</option>
+          <option value="charlatan">Charlatan</option>
+          <option value="criminal">Criminal</option>
+          <option value="entertainer">Entertainer</option>
+          <option value="folk hero">Folk Hero</option>
+          <option value="guild artisan">Guild Artisan</option>
+          <option value="hermit">Hermit</option>
+          <option value="noble">Noble</option>
+          <option value="outlander">Outlander</option>
+          <option value="sage">Sage</option>
+          <option value="sailor">Sailor</option>
+          <option value="soldier">Soldier</option>
+          <option value="urchin">Urchin</option>
+        </select>
+
       </div>
     </div>
     <div class="row">
@@ -295,10 +298,12 @@
 
 
 
+
       </div>
-      </div>
+    </div>
       <div class="col-md-4">
         <div class="equipment-list">
+          <h2>Your Equpment</h2>
         </div>
       </div>
     </div>
