--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -27,7 +27,7 @@
     <div class="row">
       <div class="col-md-4">
         <h2>Class</h2>
-        <select>
+        <select id="class-drop">
           <option value="barbarian.png">Barbarian</option>
           <option value="bard.png">Bard</option>
           <option value="cleric.png">Cleric</option>
@@ -51,13 +51,13 @@
       <div class="col-md-4">
         <br>
         <br>
-        <select>
+        <select id="background-drop">
           <option value="acolyte">Acolyte</option>
           <option value="charlatan">Charlatan</option>
           <option value="criminal">Criminal</option>
           <option value="entertainer">Entertainer</option>
-          <option value="folk hero">Folk Hero</option>
-          <option value="guild artisan">Guild Artisan</option>
+          <option value="folkhero">Folk Hero</option>
+          <option value="guildartisan">Guild Artisan</option>
           <option value="hermit">Hermit</option>
           <option value="noble">Noble</option>
           <option value="outlander">Outlander</option>
@@ -76,219 +76,219 @@
       <div class="col-md-4">
         <div class="choices">
           <form class="show barbarian">
-            <input type="radio" name="equipment" value="greataxe" checked> A greataxe<br>
-            <input type="radio" name="equipment" value="any martial weapon"> Any martial weapon<br>
+            <input type="radio" name="equipment1" value="greataxe" > A greataxe<br>
+            <input type="radio" name="equipment1" value="any martial weapon"> Any martial weapon<br>
           </form>
           <br>
           <br>
           <form class="show barbarian">
-            <input type="radio" name="equipment" value="two handaxes" checked> Two handaxes<br>
-            <input type="radio" name="equipment" value="any simple weapon"> Any simple weapon
+            <input type="radio" name="equipment2" value="two handaxes" > Two handaxes<br>
+            <input type="radio" name="equipment2" value="any simple weapon"> Any simple weapon
           </form>
           <form class="hidden bard">
-            <input type="radio" name="equipment" value="rapier" checked> A rapier<br>
-            <input type="radio" name="equipment" value="longsword">A longsword<br>
-            <input type="radio" name="equipment" value="any simple weapon"> Any simple weapon
-            <br>
-            <br>
-          </form>
-
-          <form class="hidden bard">
-            <input type="radio" name="equipment" value="diplomat's pack" checked>A diplomat's pack
-            <br>
-            <input type="radio" name="equipment" value="entertainer's pack"> An entertainer's pack
+            <input type="radio" name="equipment1" value="rapier" > A rapier<br>
+            <input type="radio" name="equipment1" value="longsword">A longsword<br>
+            <input type="radio" name="equipment1" value="any simple weapon"> Any simple weapon
             <br>
             <br>
           </form>
 
           <form class="hidden bard">
-            <input type="radio" name="equipment" value="lute" checked> A lute<br>
-            <input type="radio" name="equipment" value="any other musical instrument"> Any other musical instrument
+            <input type="radio" name="equipment2" value="diplomat's pack" >A diplomat's pack
+            <br>
+            <input type="radio" name="equipment2" value="entertainer's pack"> An entertainer's pack
+            <br>
+            <br>
+          </form>
+
+          <form class="hidden bard">
+            <input type="radio" name="equipment3" value="lute" > A lute<br>
+            <input type="radio" name="equipment3" value="any other musical instrument"> Any other musical instrument
             <br>
             <br>
           </form>
 
           <form class="hidden cleric">
-            <input type="radio" name="equipment" value="mace" checked> A mace<br>
-            <input type="radio" name="equipment" value="warhammer"> A warhammer
+            <input type="radio" name="equipment1" value="mace" > A mace<br>
+            <input type="radio" name="equipment1" value="warhammer"> A warhammer
             <br>
             <br>
           </form>
           <form class="hidden cleric">
-            <input type="radio" name="equipment" value="scale mail" checked> Scale mail<br>
-            <input type="radio" name="equipment" value="leather armor"> Leather armor<br>
-            <input type="radio" name="equipment" value="chain mail"> Chain mail
-            <br>
-            <br>
-          </form>
-
-          <form class="hidden cleric">
-            <input type="radio" name="equipment" value="light crossbow" checked> A light crossbow and 20 bolts<br>
-            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <input type="radio" name="equipment2" value="scale mail" > Scale mail<br>
+            <input type="radio" name="equipment2" value="leather armor"> Leather armor<br>
+            <input type="radio" name="equipment2" value="chain mail"> Chain mail
             <br>
             <br>
           </form>
 
           <form class="hidden cleric">
-            <input type="radio" name="equipment" value="priest's pack" checked>A priest's pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="light crossbow" > A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment3" value="any simple weapon">Any simple weapon
+            <br>
+            <br>
+          </form>
+
+          <form class="hidden cleric">
+            <input type="radio" name="equipment4" value="priest's pack" >A priest's pack<br>
+            <input type="radio" name="equipment4" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden druid">
-            <input type="radio" name="equipment" value="shield" checked>A wooden shield<br>
-            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon<br>
+            <input type="radio" name="equipment1" value="shield" >A wooden shield<br>
+            <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon<br>
             <br>
             <br>
           </form>
           <form class="hidden druid">
-            <input type="radio" name="equipment" value="scimitar" checked>A scimitar<br>
-            <input type="radio" name="equipment" value="any simple melee weapon">Any simple melee weapon<br>
+            <input type="radio" name="equipment2" value="scimitar" >A scimitar<br>
+            <input type="radio" name="equipment2" value="any simple melee weapon">Any simple melee weapon<br>
             <br>
             <br>
           </form>
           <form class="hidden fighter">
-            <input type="radio" name="equipment" value="chain mail" checked>Chain mail<br>
-            <input type="radio" name="equipment" value="leather armor and longbow">Leather armor, longbow, and 20 arrows<br>
+            <input type="radio" name="equipment1" value="chain mail" >Chain mail<br>
+            <input type="radio" name="equipment1" value="leather armor and longbow">Leather armor, longbow, and 20 arrows<br>
             <br>
             <br>
           </form>
           <form class="hidden fighter">
-            <input type="radio" name="equipment" value="martial weapon" checked>Any martial weapon and a shield<br>
-            <input type="radio" name="equipment" value="two martial weapons"> Two martial weapons
+            <input type="radio" name="equipment2" value="martial weapon" >Any martial weapon and a shield<br>
+            <input type="radio" name="equipment2" value="two martial weapons"> Two martial weapons
             <br>
             <br>
           </form>
           <form class="hidden fighter">
-            <input type="radio" name="equipment" value="light crossbow" checked>A light crossbow and 20 bolts<br>
-            <input type="radio" name="equipment" value="two handaxes">Two handaxes
+            <input type="radio" name="equipment3" value="light crossbow" >A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment3" value="two handaxes">Two handaxes
             <br>
             <br>
           </form>
           <form class="hidden fighter">
-            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A dungeoneer's pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment4" value="dungeoneer's pack" >A dungeoneer's pack<br>
+            <input type="radio" name="equipment4" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden monk">
-            <input type="radio" name="equipment" value="shortsword" checked>A shortsword<br>
-            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <input type="radio" name="equipment1" value="shortsword" >A shortsword<br>
+            <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
           <form class="hidden monk">
-            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A dungeoneer's pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment2" value="dungeoneer's pack" >A dungeoneer's pack<br>
+            <input type="radio" name="equipment2" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden paladin">
-            <input type="radio" name="equipment" value="martial weapon" checked>A martial weapon and a shield<br>
-            <input type="radio" name="equipment" value="two martial weapons">Two martial weapons
+            <input type="radio" name="equipment1" value="martial weapon" >A martial weapon and a shield<br>
+            <input type="radio" name="equipment1" value="two martial weapons">Two martial weapons
             <br>
             <br>
           </form>
           <form class="hidden paladin">
-            <input type="radio" name="equipment" value="five javelins" checked>Five Javelins<br>
-            <input type="radio" name="equipment" value="any simple melee weapon">Any simple melee weapon
+            <input type="radio" name="equipment2" value="five javelins" >Five Javelins<br>
+            <input type="radio" name="equipment2" value="any simple melee weapon">Any simple melee weapon
             <br>
             <br>
           </form>
           <form class="hidden paladin">
-            <input type="radio" name="equipment" value="priest's pack" checked>A priests pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="priest's pack" >A priests pack<br>
+            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden ranger">
-            <input type="radio" name="equipment" value="scale mail" checked>Scale mail<br>
-            <input type="radio" name="equipment" value="leather armor">Leather armor
+            <input type="radio" name="equipment1" value="scale mail" >Scale mail<br>
+            <input type="radio" name="equipment1" value="leather armor">Leather armor
             <br>
             <br>
           </form>
           <form class="hidden ranger">
-            <input type="radio" name="equipment" value="two shortswords" checked>Two shortswords<br>
-            <input type="radio" name="equipment" value="two simple melee weapons">Two simple mele weapons
+            <input type="radio" name="equipment2" value="two shortswords" >Two shortswords<br>
+            <input type="radio" name="equipment2" value="two simple melee weapons">Two simple mele weapons
             <br>
             <br>
           </form>
           <form class="hidden ranger">
-            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A dungeoneer's pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="dungeoneer's pack" >A dungeoneer's pack<br>
+            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden rogue">
-            <input type="radio" name="equipment" value="rapier" checked>A rapier<br>
-            <input type="radio" name="equipment" value="shortsword">A shortsword<br>
+            <input type="radio" name="equipment1" value="rapier" >A rapier<br>
+            <input type="radio" name="equipment1" value="shortsword">A shortsword<br>
             <br>
             <br>
           </form>
           <form class="hidden rogue">
-            <input type="radio" name="equipment" value="shortbow" checked>A shortbow and 20 arrows<br>
-            <input type="radio" name="equipment" value="shortsword">A shortsword
+            <input type="radio" name="equipment2" value="shortbow" >A shortbow and 20 arrows<br>
+            <input type="radio" name="equipment2" value="shortsword">A shortsword
             <br>
             <br>
           </form>
           <form class="hidden rogue">
-            <input type="radio" name="equipment" value="burglar's pack" checked>A burglar's pack<br>
-            <input type="radio" name="equipment" value="dungeoneer's pack">A dungeoneer's pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="burglar's pack" >A burglar's pack<br>
+            <input type="radio" name="equipment3" value="dungeoneer's pack">A dungeoneer's pack<br>
+            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden sorcerer">
-            <input type="radio" name="equipment" value="light crossbow" checked>A light crossbow and 20 bolts<br>
-            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <input type="radio" name="equipment1" value="light crossbow" >A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
           <form class="hidden sorcerer">
-            <input type="radio" name="equipment" value="component pouch" checked>A component pouch<br>
-            <input type="radio" name="equipment" value="arcane focus">An arcane focus
+            <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
+            <input type="radio" name="equipment2" value="arcane focus">An arcane focus
             <br>
             <br>
           </form>
           <form class="hidden sorcerer">
-            <input type="radio" name="equipment" value="dungeoneer's pack" checked>A duneongeer's pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="dungeoneer's pack" >A duneongeer's pack<br>
+            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden warlock">
-            <input type="radio" name="equipment" value="light crossbow" checked>A light crossbow and 20 bolts<br>
-            <input type="radio" name="equipment" value="any simple weapon">Any simple weapon
+            <input type="radio" name="equipment1" value="light crossbow" >A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
           <form class="hidden warlock">
-            <input type="radio" name="equipment" value="component pouch" checked>A component pouch<br>
-            <input type="radio" name="equipment" value="arcane focus">An arcane focus
+            <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
+            <input type="radio" name="equipment2" value="arcane focus">An arcane focus
             <br>
             <br>
           </form>
           <form class="hidden warlock">
-            <input type="radio" name="equipment" value="scholar's pack" checked>A scholar's pack<br>
-            <input type="radio" name="equipment" value="dungeoneer's pack">A dungeoneer's pack
+            <input type="radio" name="equipment3" value="scholar's pack" >A scholar's pack<br>
+            <input type="radio" name="equipment3" value="dungeoneer's pack">A dungeoneer's pack
             <br>
             <br>
           </form>
           <form class="hidden wizard">
-            <input type="radio" name="equipment" value="quarterstaff" checked>A quarterstaff<br>
-            <input type="radio" name="equipment" value="dagger">A dagger
+            <input type="radio" name="equipment1" value="quarterstaff" >A quarterstaff<br>
+            <input type="radio" name="equipment1" value="dagger">A dagger
             <br>
             <br>
           </form>
           <form class="hidden wizard">
-            <input type="radio" name="equipment" value="component pouch" checked>A component pouch<br>
-            <input type="radio" name="equipment" value="arcane focus">An arcane focus
+            <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
+            <input type="radio" name="equipment2" value="arcane focus">An arcane focus
             <br>
             <br>
           </form>
           <form class="hidden wizard">
-            <input type="radio" name="equipment" value="scholar's pack" checked>A scholar's pack<br>
-            <input type="radio" name="equipment" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="scholar's pack" >A scholar's pack<br>
+            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
@@ -304,6 +304,12 @@
       <div class="col-md-4">
         <div class="equipment-list">
           <h2>Your Equpment</h2>
+          <p class="equip-show">A holy symbol, A prayer book or prayer wheel, 5 sticks of incense,, vestments, A set of common clothes, A pouch containing 15 gp</p>
+          <p class="default">An explorer's pack and four javelins</p>
+          <p class="choice1"></p>
+          <P class="choice2"></p>
+          <p class="choice3"></p>
+          <p class="choice4"></p>
         </div>
       </div>
     </div>
