done. time for testing

--- a/saved-characters.html
+++ b/saved-characters.html
@@ -19,41 +19,32 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="standard-equipment.html">Standard Equipment</a></li>
-        <li><a href="saved-characters.html">Saved Characters</a></li>
+        <li><a href="#">Buy Equipment</a></li>
         <li><a href="about.html">About Me</a></li>
       </ul>
     </div>
   </nav>
-
-
-  <div class="feature" id="stnd">
-    <div class="container pic">
-      <h2>standard equipment</h2>
-      <p>
-        Use the standard rules for generating starting equipment<br> based on class and background.
-      </p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4" id="char-select">
+        <h2> Choose your character</h2>
+      </div>
     </div>
-  </div>
-  <div class="feature" id="buy">
-    <div class="container pic">
-      <h2>Buy Equipment</h2>
-      <p>
-        Roll for starting gold and buy equipment.
-      </p>
+
+    <div class="row">
+      <div class="col-md-4" id="saved-equip">
+        <p class="load-list"></p>
+      </div>
     </div>
+
   </div>
-  <div class="feature" id="about">
-    <div class="container pic">
-      <h2>About Me</h2>
-      <p>
-        A breif section about me, the creator of the dnd 5e equipment generator
-      </p>
-  </div>
-</div>
-<div class="footer">
-  <div class="pull-right">
-    <p>David Chase </p>
-  </div>
+
+  <script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
+
+  <script type="text/javascript" src="arrays.js"></script>
+  <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="local.js"></script>
+
 
 
 </body>
