--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="standard-equipment.html">Standard Equipment</a></li>
-        <li><a href="#">Buy Equipment</a></li>
+        <li><a href="saved-characters.html">Saved Characters</a></li>
         <li class="active"><a href="about.html">About Me</a></li>
       </ul>
     </div>
