--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li class="active"><a href="#">Standard Equipment</a></li>
-        <li><a href="#">Buy Equipment</a></li>
+        <li><a href="saved-characters.html">Saved Characters</a></li>
         <li><a href="about.html">About Me</a></li>
       </ul>
     </div>
@@ -75,17 +75,17 @@
       </div>
       <div class="col-md-4">
         <div class="choices">
-          <form class="show barbarian">
+          <form class="show barbarian classes">
             <input type="radio" name="equipment1" value="greataxe" > A greataxe<br>
             <input type="radio" name="equipment1" value="any martial weapon"> Any martial weapon<br>
           </form>
           <br>
           <br>
-          <form class="show barbarian">
+          <form class="show barbarian classes">
             <input type="radio" name="equipment2" value="two handaxes" > Two handaxes<br>
             <input type="radio" name="equipment2" value="any simple weapon"> Any simple weapon
           </form>
-          <form class="hidden bard">
+          <form class="hidden bard classes">
             <input type="radio" name="equipment1" value="rapier" > A rapier<br>
             <input type="radio" name="equipment1" value="longsword">A longsword<br>
             <input type="radio" name="equipment1" value="any simple weapon"> Any simple weapon
@@ -93,7 +93,7 @@
             <br>
           </form>
 
-          <form class="hidden bard">
+          <form class="hidden bard classes">
             <input type="radio" name="equipment2" value="diplomat's pack" >A diplomat's pack
             <br>
             <input type="radio" name="equipment2" value="entertainer's pack"> An entertainer's pack
@@ -101,20 +101,20 @@
             <br>
           </form>
 
-          <form class="hidden bard">
+          <form class="hidden bard classes">
             <input type="radio" name="equipment3" value="lute" > A lute<br>
             <input type="radio" name="equipment3" value="any other musical instrument"> Any other musical instrument
             <br>
             <br>
           </form>
 
-          <form class="hidden cleric">
+          <form class="hidden cleric classes">
             <input type="radio" name="equipment1" value="mace" > A mace<br>
             <input type="radio" name="equipment1" value="warhammer"> A warhammer
             <br>
             <br>
           </form>
-          <form class="hidden cleric">
+          <form class="hidden cleric classes">
             <input type="radio" name="equipment2" value="scale mail" > Scale mail<br>
             <input type="radio" name="equipment2" value="leather armor"> Leather armor<br>
             <input type="radio" name="equipment2" value="chain mail"> Chain mail
@@ -122,171 +122,171 @@
             <br>
           </form>
 
-          <form class="hidden cleric">
+          <form class="hidden cleric classes">
             <input type="radio" name="equipment3" value="light crossbow" > A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment3" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
 
-          <form class="hidden cleric">
+          <form class="hidden cleric classes">
             <input type="radio" name="equipment4" value="priest's pack" >A priest's pack<br>
             <input type="radio" name="equipment4" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
-          <form class="hidden druid">
+          <form class="hidden druid classes">
             <input type="radio" name="equipment1" value="shield" >A wooden shield<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon<br>
             <br>
             <br>
           </form>
-          <form class="hidden druid">
+          <form class="hidden druid classes">
             <input type="radio" name="equipment2" value="scimitar" >A scimitar<br>
             <input type="radio" name="equipment2" value="any simple melee weapon">Any simple melee weapon<br>
             <br>
             <br>
           </form>
-          <form class="hidden fighter">
+          <form class="hidden fighter classes">
             <input type="radio" name="equipment1" value="chain mail" >Chain mail<br>
             <input type="radio" name="equipment1" value="leather armor and longbow">Leather armor, longbow, and 20 arrows<br>
             <br>
             <br>
           </form>
-          <form class="hidden fighter">
+          <form class="hidden fighter classes">
             <input type="radio" name="equipment2" value="martial weapon" >Any martial weapon and a shield<br>
             <input type="radio" name="equipment2" value="two martial weapons"> Two martial weapons
             <br>
             <br>
           </form>
-          <form class="hidden fighter">
+          <form class="hidden fighter classes">
             <input type="radio" name="equipment3" value="light crossbow" >A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment3" value="two handaxes">Two handaxes
             <br>
             <br>
           </form>
-          <form class="hidden fighter">
+          <form class="hidden fighter classes">
             <input type="radio" name="equipment4" value="dungeoneer's pack" >A dungeoneer's pack<br>
             <input type="radio" name="equipment4" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
-          <form class="hidden monk">
+          <form class="hidden monk classes">
             <input type="radio" name="equipment1" value="shortsword" >A shortsword<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
-          <form class="hidden monk">
+          <form class="hidden monk classes">
             <input type="radio" name="equipment2" value="dungeoneer's pack" >A dungeoneer's pack<br>
             <input type="radio" name="equipment2" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
-          <form class="hidden paladin">
+          <form class="hidden paladin classes">
             <input type="radio" name="equipment1" value="martial weapon" >A martial weapon and a shield<br>
             <input type="radio" name="equipment1" value="two martial weapons">Two martial weapons
             <br>
             <br>
           </form>
-          <form class="hidden paladin">
+          <form class="hidden paladin classes">
             <input type="radio" name="equipment2" value="five javelins" >Five Javelins<br>
             <input type="radio" name="equipment2" value="any simple melee weapon">Any simple melee weapon
             <br>
             <br>
           </form>
-          <form class="hidden paladin">
+          <form class="hidden paladin classes">
             <input type="radio" name="equipment3" value="priest's pack" >A priests pack<br>
             <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
-          <form class="hidden ranger">
+          <form class="hidden ranger classes">
             <input type="radio" name="equipment1" value="scale mail" >Scale mail<br>
             <input type="radio" name="equipment1" value="leather armor">Leather armor
             <br>
             <br>
           </form>
-          <form class="hidden ranger">
+          <form class="hidden ranger classes">
             <input type="radio" name="equipment2" value="two shortswords" >Two shortswords<br>
             <input type="radio" name="equipment2" value="two simple melee weapons">Two simple mele weapons
             <br>
             <br>
           </form>
-          <form class="hidden ranger">
+          <form class="hidden ranger classes">
             <input type="radio" name="equipment3" value="dungeoneer's pack" >A dungeoneer's pack<br>
             <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
-          <form class="hidden rogue">
+          <form class="hidden rogue classes">
             <input type="radio" name="equipment1" value="rapier" >A rapier<br>
             <input type="radio" name="equipment1" value="shortsword">A shortsword<br>
             <br>
             <br>
           </form>
-          <form class="hidden rogue">
+          <form class="hidden rogue classes">
             <input type="radio" name="equipment2" value="shortbow" >A shortbow and 20 arrows<br>
             <input type="radio" name="equipment2" value="shortsword">A shortsword
             <br>
             <br>
           </form>
-          <form class="hidden rogue">
+          <form class="hidden rogue classes">
             <input type="radio" name="equipment3" value="burglar's pack" >A burglar's pack<br>
             <input type="radio" name="equipment3" value="dungeoneer's pack">A dungeoneer's pack<br>
             <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
-          <form class="hidden sorcerer">
+          <form class="hidden sorcerer classes">
             <input type="radio" name="equipment1" value="light crossbow" >A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
-          <form class="hidden sorcerer">
+          <form class="hidden sorcerer classes">
             <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
             <input type="radio" name="equipment2" value="arcane focus">An arcane focus
             <br>
             <br>
           </form>
-          <form class="hidden sorcerer">
+          <form class="hidden sorcerer classes">
             <input type="radio" name="equipment3" value="dungeoneer's pack" >A duneongeer's pack<br>
             <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
-          <form class="hidden warlock">
+          <form class="hidden warlock classes">
             <input type="radio" name="equipment1" value="light crossbow" >A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
-          <form class="hidden warlock">
+          <form class="hidden warlock classes">
             <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
             <input type="radio" name="equipment2" value="arcane focus">An arcane focus
             <br>
             <br>
           </form>
-          <form class="hidden warlock">
+          <form class="hidden warlock classes">
             <input type="radio" name="equipment3" value="scholar's pack" >A scholar's pack<br>
             <input type="radio" name="equipment3" value="dungeoneer's pack">A dungeoneer's pack
             <br>
             <br>
           </form>
-          <form class="hidden wizard">
+          <form class="hidden wizard classes">
             <input type="radio" name="equipment1" value="quarterstaff" >A quarterstaff<br>
             <input type="radio" name="equipment1" value="dagger">A dagger
             <br>
             <br>
           </form>
-          <form class="hidden wizard">
+          <form class="hidden wizard classes">
             <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
             <input type="radio" name="equipment2" value="arcane focus">An arcane focus
             <br>
             <br>
           </form>
-          <form class="hidden wizard">
+          <form class="hidden wizard classes">
             <input type="radio" name="equipment3" value="scholar's pack" >A scholar's pack<br>
             <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
             <br>
@@ -314,6 +314,13 @@
       </div>
     </div>
   </div>
+  <form class="form-inline">
+    <div class="form-group">
+      <label class="sr-only" for="characterName">Character name</label>
+      <input type="text" class="form-control" id="characterName" placeholder="Enter your character's name">
+      </div>
+      <button type="submit" class="btn btn-primary">Save character</button>
+    </form>
   <div class="footer">
     <div class="pull-right">
       <p>David Chase</p>
