fixed some gramatical/concatenation errors

--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -76,7 +76,7 @@
       <div class="col-md-4">
         <div class="choices">
           <form class="show barbarian classes">
-            <input type="radio" name="equipment1" value="greataxe" > A greataxe<br>
+            <input type="radio" name="equipment1" value="a greataxe" > A greataxe<br>
             <input type="radio" name="equipment1" value="any martial weapon"> Any martial weapon<br>
           </form>
           <br>
@@ -86,31 +86,31 @@
             <input type="radio" name="equipment2" value="any simple weapon"> Any simple weapon
           </form>
           <form class="hidden bard classes">
-            <input type="radio" name="equipment1" value="rapier" > A rapier<br>
-            <input type="radio" name="equipment1" value="longsword">A longsword<br>
+            <input type="radio" name="equipment1" value="a rapier" > A rapier<br>
+            <input type="radio" name="equipment1" value="a longsword">A longsword<br>
             <input type="radio" name="equipment1" value="any simple weapon"> Any simple weapon
             <br>
             <br>
           </form>
 
           <form class="hidden bard classes">
-            <input type="radio" name="equipment2" value="diplomat's pack" >A diplomat's pack
+            <input type="radio" name="equipment2" value="a diplomat's pack" >A diplomat's pack
             <br>
-            <input type="radio" name="equipment2" value="entertainer's pack"> An entertainer's pack
+            <input type="radio" name="equipment2" value="an entertainer's pack"> An entertainer's pack
             <br>
             <br>
           </form>
 
           <form class="hidden bard classes">
-            <input type="radio" name="equipment3" value="lute" > A lute<br>
+            <input type="radio" name="equipment3" value="a lute" > A lute<br>
             <input type="radio" name="equipment3" value="any other musical instrument"> Any other musical instrument
             <br>
             <br>
           </form>
 
           <form class="hidden cleric classes">
-            <input type="radio" name="equipment1" value="mace" > A mace<br>
-            <input type="radio" name="equipment1" value="warhammer"> A warhammer
+            <input type="radio" name="equipment1" value="a mace" > A mace<br>
+            <input type="radio" name="equipment1" value="a warhammer"> A warhammer
             <br>
             <br>
           </form>
@@ -123,68 +123,68 @@
           </form>
 
           <form class="hidden cleric classes">
-            <input type="radio" name="equipment3" value="light crossbow" > A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment3" value="a light crossbow" > A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment3" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
 
           <form class="hidden cleric classes">
-            <input type="radio" name="equipment4" value="priest's pack" >A priest's pack<br>
-            <input type="radio" name="equipment4" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment4" value="a priest's pack" >A priest's pack<br>
+            <input type="radio" name="equipment4" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden druid classes">
-            <input type="radio" name="equipment1" value="shield" >A wooden shield<br>
+            <input type="radio" name="equipment1" value="a shield" >A wooden shield<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon<br>
             <br>
             <br>
           </form>
           <form class="hidden druid classes">
-            <input type="radio" name="equipment2" value="scimitar" >A scimitar<br>
+            <input type="radio" name="equipment2" value="a scimitar" >A scimitar<br>
             <input type="radio" name="equipment2" value="any simple melee weapon">Any simple melee weapon<br>
             <br>
             <br>
           </form>
           <form class="hidden fighter classes">
             <input type="radio" name="equipment1" value="chain mail" >Chain mail<br>
-            <input type="radio" name="equipment1" value="leather armor and longbow">Leather armor, longbow, and 20 arrows<br>
+            <input type="radio" name="equipment1" value="leather armor and a longbow, and 20 arrows">Leather armor, longbow, and 20 arrows<br>
             <br>
             <br>
           </form>
           <form class="hidden fighter classes">
-            <input type="radio" name="equipment2" value="martial weapon" >Any martial weapon and a shield<br>
+            <input type="radio" name="equipment2" value="any martial weapon" >Any martial weapon and a shield<br>
             <input type="radio" name="equipment2" value="two martial weapons"> Two martial weapons
             <br>
             <br>
           </form>
           <form class="hidden fighter classes">
-            <input type="radio" name="equipment3" value="light crossbow" >A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment3" value="a light crossbow" >A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment3" value="two handaxes">Two handaxes
             <br>
             <br>
           </form>
           <form class="hidden fighter classes">
-            <input type="radio" name="equipment4" value="dungeoneer's pack" >A dungeoneer's pack<br>
-            <input type="radio" name="equipment4" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment4" value="a dungeoneer's pack" >A dungeoneer's pack<br>
+            <input type="radio" name="equipment4" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden monk classes">
-            <input type="radio" name="equipment1" value="shortsword" >A shortsword<br>
+            <input type="radio" name="equipment1" value="a shortsword" >A shortsword<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
           <form class="hidden monk classes">
-            <input type="radio" name="equipment2" value="dungeoneer's pack" >A dungeoneer's pack<br>
-            <input type="radio" name="equipment2" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment2" value="a dungeoneer's pack" >A dungeoneer's pack<br>
+            <input type="radio" name="equipment2" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden paladin classes">
-            <input type="radio" name="equipment1" value="martial weapon" >A martial weapon and a shield<br>
+            <input type="radio" name="equipment1" value="a martial weapon" >A martial weapon and a shield<br>
             <input type="radio" name="equipment1" value="two martial weapons">Two martial weapons
             <br>
             <br>
@@ -196,8 +196,8 @@
             <br>
           </form>
           <form class="hidden paladin classes">
-            <input type="radio" name="equipment3" value="priest's pack" >A priests pack<br>
-            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="a priest's pack" >A priests pack<br>
+            <input type="radio" name="equipment3" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
@@ -214,81 +214,81 @@
             <br>
           </form>
           <form class="hidden ranger classes">
-            <input type="radio" name="equipment3" value="dungeoneer's pack" >A dungeoneer's pack<br>
-            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="a dungeoneer's pack" >A dungeoneer's pack<br>
+            <input type="radio" name="equipment3" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden rogue classes">
-            <input type="radio" name="equipment1" value="rapier" >A rapier<br>
-            <input type="radio" name="equipment1" value="shortsword">A shortsword<br>
+            <input type="radio" name="equipment1" value="a rapier" >A rapier<br>
+            <input type="radio" name="equipment1" value="a shortsword">A shortsword<br>
             <br>
             <br>
           </form>
           <form class="hidden rogue classes">
-            <input type="radio" name="equipment2" value="shortbow" >A shortbow and 20 arrows<br>
-            <input type="radio" name="equipment2" value="shortsword">A shortsword
+            <input type="radio" name="equipment2" value="a shortbow and 20 arrows" >A shortbow and 20 arrows<br>
+            <input type="radio" name="equipment2" value="a shortsword">A shortsword
             <br>
             <br>
           </form>
           <form class="hidden rogue classes">
-            <input type="radio" name="equipment3" value="burglar's pack" >A burglar's pack<br>
-            <input type="radio" name="equipment3" value="dungeoneer's pack">A dungeoneer's pack<br>
-            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="a burglar's pack" >A burglar's pack<br>
+            <input type="radio" name="equipment3" value="a dungeoneer's pack">A dungeoneer's pack<br>
+            <input type="radio" name="equipment3" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden sorcerer classes">
-            <input type="radio" name="equipment1" value="light crossbow" >A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment1" value="a light crossbow" >A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
           <form class="hidden sorcerer classes">
-            <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
-            <input type="radio" name="equipment2" value="arcane focus">An arcane focus
+            <input type="radio" name="equipment2" value="a component pouch" >A component pouch<br>
+            <input type="radio" name="equipment2" value="an arcane focus">An arcane focus
             <br>
             <br>
           </form>
           <form class="hidden sorcerer classes">
-            <input type="radio" name="equipment3" value="dungeoneer's pack" >A duneongeer's pack<br>
-            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="a dungeoneer's pack" >A duneongeer's pack<br>
+            <input type="radio" name="equipment3" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
           <form class="hidden warlock classes">
-            <input type="radio" name="equipment1" value="light crossbow" >A light crossbow and 20 bolts<br>
+            <input type="radio" name="equipment1" value="a light crossbow" >A light crossbow and 20 bolts<br>
             <input type="radio" name="equipment1" value="any simple weapon">Any simple weapon
             <br>
             <br>
           </form>
           <form class="hidden warlock classes">
-            <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
-            <input type="radio" name="equipment2" value="arcane focus">An arcane focus
+            <input type="radio" name="equipment2" value="a component pouch" >A component pouch<br>
+            <input type="radio" name="equipment2" value="an arcane focus">An arcane focus
             <br>
             <br>
           </form>
           <form class="hidden warlock classes">
-            <input type="radio" name="equipment3" value="scholar's pack" >A scholar's pack<br>
-            <input type="radio" name="equipment3" value="dungeoneer's pack">A dungeoneer's pack
+            <input type="radio" name="equipment3" value="a scholar's pack" >A scholar's pack<br>
+            <input type="radio" name="equipment3" value="a dungeoneer's pack">A dungeoneer's pack
             <br>
             <br>
           </form>
           <form class="hidden wizard classes">
-            <input type="radio" name="equipment1" value="quarterstaff" >A quarterstaff<br>
-            <input type="radio" name="equipment1" value="dagger">A dagger
+            <input type="radio" name="equipment1" value="a quarterstaff" >A quarterstaff<br>
+            <input type="radio" name="equipment1" value="a dagger">A dagger
             <br>
             <br>
           </form>
           <form class="hidden wizard classes">
-            <input type="radio" name="equipment2" value="component pouch" >A component pouch<br>
-            <input type="radio" name="equipment2" value="arcane focus">An arcane focus
+            <input type="radio" name="equipment2" value="a component pouch" >A component pouch<br>
+            <input type="radio" name="equipment2" value="an arcane focus">An arcane focus
             <br>
             <br>
           </form>
           <form class="hidden wizard classes">
-            <input type="radio" name="equipment3" value="scholar's pack" >A scholar's pack<br>
-            <input type="radio" name="equipment3" value="explorer's pack">An explorer's pack
+            <input type="radio" name="equipment3" value="a scholar's pack" >A scholar's pack<br>
+            <input type="radio" name="equipment3" value="an explorer's pack">An explorer's pack
             <br>
             <br>
           </form>
