fixed a bunch of <a> tags

--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -13,11 +13,11 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Dnd 5e Equipment Generator</a>
+        <a class="navbar-brand" href="index.html">Dnd 5e Equipment Generator</a>
       </div>
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="#">Standard Equipment</a></li>
+        <li class="active"><a href="standard-equipment.html">Standard Equipment</a></li>
         <li><a href="saved-characters.html">Saved Characters</a></li>
         <li><a href="about.html">About Me</a></li>
       </ul>
