--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Dnd 5e Equipment Generator</a>
+        <a class="navbar-brand" href="index.html">Dnd 5e Equipment Generator</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="standard-equipment.html">Standard Equipment</a></li>
         <li><a href="saved-characters.html">Saved Characters</a></li>
         <li><a href="about.html">About Me</a></li>
@@ -27,28 +27,28 @@
 
 
   <div class="feature" id="stnd">
-    <div class="container pic">
-      <h2>standard equipment</h2>
+    <a href="standard-equipment.html"><div class="container pic">
+      <h2>Standard Equipment</h2>
       <p>
         Use the standard rules for generating starting equipment<br> based on class and background.
       </p>
-    </div>
+    </div></a>
   </div>
   <div class="feature" id="buy">
-    <div class="container pic">
-      <h2>Buy Equipment</h2>
+    <a href="saved-characters.html"><div class="container pic">
+      <h2>Saved Characters</h2>
       <p>
-        Roll for starting gold and buy equipment.
+        Check out your saved characters
       </p>
-    </div>
+    </div></a>
   </div>
   <div class="feature" id="about">
-    <div class="container pic">
+    <a href="about.html"><div class="container pic">
       <h2>About Me</h2>
       <p>
         A breif section about me, the creator of the dnd 5e equipment generator
       </p>
-  </div>
+  </div></a>
 </div>
 <div class="footer">
   <div class="pull-right">
