--- a/saved-characters.html
+++ b/saved-characters.html
@@ -14,12 +14,12 @@
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Dnd 5e Equipment Generator</a>
+        <a class="navbar-brand" href="index.html">Dnd 5e Equipment Generator</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="standard-equipment.html">Standard Equipment</a></li>
-        <li><a href="#">Buy Equipment</a></li>
+        <li class="active"><a href="saved-characters.html">Saved Characters</a></li>
         <li><a href="about.html">About Me</a></li>
       </ul>
     </div>
@@ -33,7 +33,7 @@
 
     <div class="row">
       <div class="col-md-4" id="saved-equip">
-        
+
         <p class="load-list"></p>
       </div>
     </div>
