fixed blank name/blank drop down bug and typos

--- a/saved-characters.html
+++ b/saved-characters.html
@@ -17,7 +17,7 @@
         <a class="navbar-brand" href="index.html">Dnd 5e Equipment Generator</a>
       </div>
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="standard-equipment.html">Standard Equipment</a></li>
         <li class="active"><a href="saved-characters.html">Saved Characters</a></li>
         <li><a href="about.html">About Me</a></li>
