more design/grammar tweaks

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <a href="about.html"><div class="container pic">
       <h2>About Me</h2>
       <p>
-        A breif section about me, the creator of the dnd 5e equipment generator
+        A breif section about me, the creator of the Dnd 5e equipment generator
       </p>
   </div></a>
 </div>
