--- a/standard-equipment.html
+++ b/standard-equipment.html
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h2>Class</h2>
+        <h2>Choose a class</h2>
         <select id="class-drop">
           <option value="barbarian.png">Barbarian</option>
           <option value="bard.png">Bard</option>
@@ -44,13 +44,12 @@
 
       </div>
       <div class="col-md-4">
-        <h2>&lt-- choose a class. Choose a background --&gt</h2>
+        <h2>A few more choices to make</h2>
 
 
       </div>
       <div class="col-md-4">
-        <br>
-        <br>
+        <h2>Choose a background</h2>
         <select id="background-drop">
           <option value="acolyte">Acolyte</option>
           <option value="charlatan">Charlatan</option>
@@ -303,7 +302,7 @@
     </div>
       <div class="col-md-4">
         <div class="equipment-list">
-          <h2>Your Equpment</h2>
+          <h2>Your Equipment</h2>
           <p class="equip-show">A holy symbol, a prayer book or prayer wheel, 5 sticks of incense, vestments, a set of common clothes, a pouch containing 15 gp</p>
           <p class="default">An explorer's pack and four javelins</p>
           <p class="choice1"></p>
